# pantheon

./: .env.jenkins-ubuntu.example  .env.jenkins.example  .gitignore  Dockerfile.app-server  Dockerfile.jenkins-agent  Dockerfile.jenkins-agent-ubuntu  Dockerfile.jenkins-ubuntu  Jenkinsfile  README.md  devops-learning-plan-tasks.md  docker-compose.app-server.yml  docker-compose.jenkins-agent-ubuntu.yml  docker-compose.jenkins.yml  jenkins-master-workaround.md  jenkins-setup.md  setup-dnf.sh  setup.md  setup.sh
ansible/: deploy.yml  inventory.ini
backend/: .dockerignore  .env.example  Dockerfile.api  README.md  docker-compose.yml  init.sql  pyproject.toml
backend/taskmaster_api/: app.py  crud.py
config/: supervisord.conf
docs/: app-virtual-env-uv.md  backend-local-development.md  jenkins-setup.md
scripts/: .env.example  healthcheck_fastapi.sh  healthcheck_jenkins.sh  jenkins-agent-entrypoint.sh
task-1_linux-and-bash/: setup.sh
