[project]
name = "taskmaster-api"
version = "1.0.0"
description = "Task Manager FastAPI App with PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"

authors = [
  {name = "Rene Martin Kuda"}
]

dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "psycopg2-binary>=2.9.9",
  "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
